fixed spacing to top three sections

--- a/styles.css
+++ b/styles.css
@@ -53,18 +53,28 @@
 }
   
 .navigation {
-    background-color: tomato;
+    /* background-color: tomato; */
     display: flex;
+    list-style-type: none;
+    justify-content: flex-end;
+    padding: 1em;
 }
   
 .navigation ul {
-    list-style-type: none;
+    /* list-style-type: none; */
+    /* margin: 16px; */
     display: flex;
 }
 
-.navigation ul li:nth-child(2), .navigation ul li:nth-child(3) {
-    display: flex
+.navigation ul > li:first-child { 
+    /* background-color: tomato; */
+    justify-self: flex-start;
+
+    /* font-style: italic; */
+    /* font-size: 28pt; */
+    /* font-weight: bolder; */
 }
+
 
 .title-section {
     grid-row: 2 / 3;
@@ -72,11 +82,16 @@
   }
   
 .title {
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5%
+    padding: 5%;
+    justify-content: space-around
+}
+
+.title h1 {
+    margin: 0;
 }
   
 .top-quote-block {
@@ -85,8 +100,13 @@
 }
   
 #quote-one {
-    background-color: orange;
+    /* background-color: orange; */
     padding: 3%
+}
+
+#quote-one p {
+    display: flex;
+    justify-content: flex-end
 }
 
 .why-company-section {
@@ -95,7 +115,7 @@
 }
   
 .about-company {
-    background-color: lightblue;
+    /* background-color: lightblue; */
     padding: 5%
 }
   
@@ -108,6 +128,10 @@
     display: flex;
     justify-content: space-evenly;
     padding: 3%;
+}
+
+.about-company ul li {
+    padding-right: 3%
 }
   
 .second-quote-block {
